Bug 1640139 - Don't dispatch contextmenu event triggered from control-left-click as right-button in Mac; r=masayuki

All other browsers dispatch contextmenu as left-button in this case.

Differential Revision: https://phabricator.services.mozilla.com/D76493